config/multiclusterconfig/root/httpredirect.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: redirect
  namespace: mc-gateway
spec:
  parentRefs:
  - namespace: mc-gateway
    name: mc-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
